welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:8: error: too many arguments for method droite: ()Unit
	case "I" => droite(2); avance();
                          ^